--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    Nguyen Hong Quan
+                    Nguyễn Hồng Quân
                 </h1>
                 <div class="subheading mb-5">
-                    số 35 ngách 63/33, Lê Đức Thọ, Nam Từ Liêm, Hà Nội.
-                    <a href="mailto:quannhph9166@fpt.edu.vn">quannhph9166@fpt.edu.vn</a>
+                    số 35 ngách 63/33, Lê Đức Thọ, Nam Từ Liêm, Hà Nội.<br>
+                    Email cá nhân:
+                    <a href="mailto:quannhph9166@fpt.edu.vn">quannhph9166@fpt.edu.vn</a> hoặc
+                    <a href="mailto:helgrindxxx@gmail.com">helgrindxxx@gmail.com</a><br>
+                    Số điện thoại:
+                    <a href="tel:0914946200">0914.946.200</a>
                 </div>
                 <p class="lead mb-5">
                     Tôi hiện đang là sinh viên năm 2, trường cao đẳng thực
