Cap nhat thong tin CV

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Nguyen Hong Quan</span>
+            <span class="d-block d-lg-none">Nguyễn Hồng Quân</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.jpg" alt="" /></span>
         </a>
@@ -34,19 +34,16 @@
                     <a class="nav-link js-scroll-trigger" href="#about">Sơ lược</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#experience">Kinh nghiệm</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#education">Giáo dục</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Kỹ năng</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#interests">Sở thích</a>
+                    <a class="nav-link js-scroll-trigger" href="#projects">Project</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#awards">Giải thưởng</a>
+                    <a class="nav-link js-scroll-trigger" href="#interests">Sở thích</a>
                 </li>
             </ul>
         </div>
@@ -60,108 +57,24 @@
                     Nguyễn Hồng Quân
                 </h1>
                 <div class="subheading mb-5">
-                    số 35 ngách 63/33, Lê Đức Thọ, Nam Từ Liêm, Hà Nội.<br>
-                    Email cá nhân:
+                    Địa chỉ: số 35 ngách 63/33, Lê Đức Thọ, Nam Từ Liêm, Hà Nội.<br>
+                    Email:
                     <a href="mailto:quannhph9166@fpt.edu.vn">quannhph9166@fpt.edu.vn</a> hoặc
                     <a href="mailto:helgrindxxx@gmail.com">helgrindxxx@gmail.com</a><br>
                     Số điện thoại:
                     <a href="tel:0914946200">0914.946.200</a>
                 </div>
                 <p class="lead mb-5">
-                    Tôi hiện đang là sinh viên năm 2, trường cao đẳng thực
-                    hành FPT Polytechnic. Chuyên ngành tôi đang theo học là
-                    thiết kế website.
+                    Hiện tại tôi đang là sinh viên năm 2 (kỳ 5) trường cao đẳng thực hành FPT Polytechnic, ngành học của tôi là Công Nghệ thông tin, chuyên ngành Thiết kế Website.
                 </p>
-                <div class="social-icons">
-                    <a class="social-icon" target="_blank" href="https://www.facebook.com/helgrindxxx"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="social-icon" target="_blank" href="https://github.com/quannh2807"><i
-                            class="fab fa-github"></i></a>
-                </div>
-            </div>
-        </section>
-        <hr class="m-0" />
-        <!-- Experience-->
-        <section class="resume-section" id="experience">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Experience</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Senior Web Developer</h3>
-                        <div class="subheading mb-3">
-                            Intelitec Solutions
-                        </div>
-                        <p>
-                            Bring to the table win-win survival strategies
-                            to ensure proactive domination. At the end of
-                            the day, going forward, a new normal that has
-                            evolved from generation X is on the runway
-                            heading towards a streamlined cloud solution.
-                            User generated content in real-time will have
-                            multiple touchpoints for offshoring.
-                        </p>
+                <div class="row align-items-center">
+                    <div class="col-md-6 social-icons">
+                        <a class="social-icon facebook" target="_blank" href="https://www.facebook.com/helgrindxxx"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon github" target="_blank" href="https://github.com/quannh2807"><i
+                                class="fab fa-github"></i></a>
                     </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">March 2013 - Present</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Developer</h3>
-                        <div class="subheading mb-3">
-                            Intelitec Solutions
-                        </div>
-                        <p>
-                            Capitalize on low hanging fruit to identify a
-                            ballpark value added activity to beta test.
-                            Override the digital divide with additional
-                            clickthroughs from DevOps. Nanotechnology
-                            immersion along the information highway will
-                            close the loop on focusing solely on the bottom
-                            line.
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">December 2011 - March 2013</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Junior Web Designer</h3>
-                        <div class="subheading mb-3">
-                            Shout! Media Productions
-                        </div>
-                        <p>
-                            Podcasting operational change management inside
-                            of workflows to establish a framework. Taking
-                            seamless key performance indicators offline to
-                            maximise the long tail. Keeping your eye on the
-                            ball while performing a deep dive on the
-                            start-up mentality to derive convergence on
-                            cross-platform integration.
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">July 2010 - December 2011</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Design Intern</h3>
-                        <div class="subheading mb-3">
-                            Shout! Media Productions
-                        </div>
-                        <p>
-                            Collaboratively administrate empowered markets
-                            via plug-and-play networks. Dynamically
-                            procrastinate B2C users after installed base
-                            benefits. Dramatically visualize customer
-                            directed convergence without revolutionary ROI.
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">September 2008 - June 2010</span>
-                    </div>
+                    <div class="col-md-6 download"><a href="/assets/file/MyCV.pdf">Download CV: <i class="fas fa-file-download"></i></a></div>
                 </div>
             </div>
         </section>
@@ -169,30 +82,17 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5">Education</h2>
+                <h2 class="mb-5">Giáo dục</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">University of Colorado Boulder</h3>
+                        <h3 class="mb-0">Cao đẳng thực hành FPT Polytechnic</h3>
                         <div class="subheading mb-3">
-                            Bachelor of Science
+                            Công nghệ thông tin
                         </div>
-                        <div>Computer Science - Web Development Track</div>
-                        <p>GPA: 3.23</p>
+                        <div>Thiết kế website</div>
                     </div>
                     <div class="flex-shrink-0">
-                        <span class="text-primary">August 2006 - May 2010</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">James Buchanan High School</h3>
-                        <div class="subheading mb-3">
-                            Technology Magnet Program
-                        </div>
-                        <p>GPA: 3.56</p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">August 2002 - May 2006</span>
+                        <span class="text-primary">Tháng 11/2018 - đến nay</span>
                     </div>
                 </div>
             </div>
@@ -201,9 +101,9 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Skills</h2>
+                <h2 class="mb-5">Kỹ năng</h2>
                 <div class="subheading mb-3">
-                    Programming Languages & Tools
+                    Công cụ và ngôn ngữ
                 </div>
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item">
@@ -213,53 +113,60 @@
                         <i class="fab fa-css3-alt"></i>
                     </li>
                     <li class="list-inline-item">
-                        <i class="fab fa-js-square"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-angular"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-react"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-node-js"></i>
+                        <i class="fab fa-bootstrap"></i>
                     </li>
                     <li class="list-inline-item">
                         <i class="fab fa-sass"></i>
                     </li>
                     <li class="list-inline-item">
-                        <i class="fab fa-less"></i>
+                        <i class="fab fa-php"></i>
                     </li>
                     <li class="list-inline-item">
-                        <i class="fab fa-wordpress"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-gulp"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-grunt"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-npm"></i>
+                        <i class="fab fa-js-square"></i>
                     </li>
                 </ul>
-                <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Mobile-First, Responsive Design
+                        HTML5 & CSS3
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Browser Testing & Debugging
+                        SASS
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Functional Teams
+                        BOOTSTRAP
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Agile Development & Scrum
+                        PHP theo mô hình MVC
+                    </li>
+
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        JAVASCRIPT cơ bản
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Projects-->
+        <section class="resume-section" id="projects">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Project đã thực hiện</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a href="https://github.com/quannh2807/SSKPI.git" target="_blank">Responsive áp dụng HTML5, CSS3, SASS, BOOTSTRAP</a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a href="https://github.com/quannh2807/PHP2.git" target="_blank">Trang quản trị bằng PHP theo mô hình MVC</a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a href="https://github.com/quannh2807/quannh_ph09166.git" target="_blank">Website đặt phòng bằng PHP thuần</a>
                     </li>
                 </ul>
             </div>
@@ -268,71 +175,14 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
+                <h2 class="mb-5">Sở thích</h2>
                 <p>
-                    Apart from being a web developer, I enjoy most of my
-                    time being outdoors. In the winter, I am an avid skier
-                    and novice ice climber. During the warmer months here in
-                    Colorado, I enjoy mountain biking, free climbing, and
-                    kayaking.
+                    Ngoài việc học tập tôi thích chạy bộ và đạp xe ngoài trời để rèn luyện sức khỏe.
                 </p>
                 <p class="mb-0">
-                    When forced indoors, I follow a number of sci-fi and
-                    fantasy genre movies and television shows, I am an
-                    aspiring chef, and I spend a large amount of my free
-                    time exploring the latest technology advancements in the
-                    front-end web development world.
+                    Khi ở nhà sở thích của tôi là nấu ăn và đọc sách, xem thông tin trên mạng. Một vài trang web công nghệ mà tôi hay xem đó là <a href="https://viblo.asia/">Viblo asia</a>
                 </p>
-            </div>
-        </section>
-        <hr class="m-0" />
-        <!-- Awards-->
-        <section class="resume-section" id="awards">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Google Analytics Certified Developer
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Mobile Web Specialist - Google Certification
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Emerging
-                        Tech Competition 2009
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - University of Colorado Boulder - Adobe
-                        Creative Jam 2008 (UI Design Category)
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        2
-                        <sup>nd</sup>
-                        Place - University of Colorado Boulder - Emerging
-                        Tech Competition 2008
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Place - James Buchanan High School - Hackathon 2006
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        3
-                        <sup>rd</sup>
-                        Place - James Buchanan High School - Hackathon 2005
-                    </li>
-                </ul>
+                <p class="mb-o">Ngoài những sở thích trên thì tôi còn đăng đặt mục tiêu học chơi 1 nhạc cụ đó là đàn guitar <i>mặc dù chưa khả quan lắm :((</i></p>
             </div>
         </section>
     </div>
