--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <a href="tel:0914946200">0914.946.200</a>
                 </div>
                 <p class="lead mb-5">
-                    Hiện tại tôi đang là sinh viên năm 2 (kỳ 5) trường cao đẳng thực hành FPT Polytechnic, ngành học của tôi là Công Nghệ thông tin, chuyên ngành Thiết kế Website.
+                    Hiện tại tôi đang là sinh viên năm 2 (kỳ 5) trường cao đẳng thực hành FPT Polytechnic, ngành học của
+                    tôi là Công Nghệ thông tin, chuyên ngành Thiết kế Website.
                 </p>
                 <div class="row align-items-center">
                     <div class="col-md-6 social-icons">
@@ -74,7 +75,8 @@
                         <a class="social-icon github" target="_blank" href="https://github.com/quannh2807"><i
                                 class="fab fa-github"></i></a>
                     </div>
-                    <div class="col-md-6 download"><a href="/assets/file/MyCV.pdf">Download CV: <i class="fas fa-file-download"></i></a></div>
+                    <div class="col-md-6 download"><a href="/assets/file/MyCV.pdf">Download CV: <i
+                                class="fas fa-file-download"></i></a></div>
                 </div>
             </div>
         </section>
@@ -102,9 +104,7 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Kỹ năng</h2>
-                <div class="subheading mb-3">
-                    Công cụ và ngôn ngữ
-                </div>
+
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item">
                         <i class="fab fa-html5"></i>
@@ -124,30 +124,53 @@
                     <li class="list-inline-item">
                         <i class="fab fa-js-square"></i>
                     </li>
-                </ul>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        HTML5 & CSS3
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        SASS
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        BOOTSTRAP
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        PHP theo mô hình MVC
-                    </li>
-
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        JAVASCRIPT cơ bản
+                    <li class="list-inline-item">
+                        <i class="fab fa-git-alt"></i>
                     </li>
                 </ul>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="subheading mb-3">
+                            Front-end
+                        </div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                HTML5 & CSS3
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                SASS
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                BOOTSTRAP
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="subheading mb-3">
+                            Back-end
+                        </div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                PHP theo mô hình MVC
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="subheading mb-3">
+                            Version Control
+                        </div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Git
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <hr class="m-0" />
@@ -158,15 +181,18 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        <a href="https://github.com/quannh2807/SSKPI.git" target="_blank">Responsive áp dụng HTML5, CSS3, SASS, BOOTSTRAP</a>
+                        <a href="https://github.com/quannh2807/SSKPI.git" target="_blank">Responsive áp dụng HTML5,
+                            CSS3, SASS, BOOTSTRAP</a>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        <a href="https://github.com/quannh2807/PHP2.git" target="_blank">Trang quản trị bằng PHP theo mô hình MVC</a>
+                        <a href="https://github.com/quannh2807/PHP2.git" target="_blank">Trang quản trị bằng PHP theo mô
+                            hình MVC</a>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        <a href="https://github.com/quannh2807/quannh_ph09166.git" target="_blank">Website đặt phòng bằng PHP thuần</a>
+                        <a href="https://github.com/quannh2807/quannh_ph09166.git" target="_blank">Website đặt phòng
+                            bằng PHP thuần</a>
                     </li>
                 </ul>
             </div>
@@ -180,9 +206,11 @@
                     Ngoài việc học tập tôi thích chạy bộ và đạp xe ngoài trời để rèn luyện sức khỏe.
                 </p>
                 <p class="mb-0">
-                    Khi ở nhà sở thích của tôi là nấu ăn và đọc sách, xem thông tin trên mạng. Một vài trang web công nghệ mà tôi hay xem đó là <a href="https://viblo.asia/">Viblo asia</a>
+                    Khi ở nhà sở thích của tôi là nấu ăn và đọc sách, xem thông tin trên mạng. Một vài trang web công
+                    nghệ mà tôi hay xem đó là <a href="https://viblo.asia/">Viblo asia</a>
                 </p>
-                <p class="mb-o">Ngoài những sở thích trên thì tôi còn đăng đặt mục tiêu học chơi 1 nhạc cụ đó là đàn guitar <i>mặc dù chưa khả quan lắm :((</i></p>
+                <p class="mb-o">Ngoài những sở thích trên thì tôi còn đăng đặt mục tiêu học chơi 1 nhạc cụ đó là đàn
+                    guitar <i>mặc dù chưa khả quan lắm :((</i></p>
             </div>
         </section>
     </div>
