Cap nhat download button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a class="social-icon github" target="_blank" href="https://github.com/quannh2807"><i
                                 class="fab fa-github"></i></a>
                     </div>
-                    <div class="col-md-6 download"><a href="/assets/file/MyCV.pdf" download="">Download CV: <i
+                    <div class="col-md-6 download"><a href="/assets/file/MyCV.pdf" download>Download CV: <i
                                 class="fas fa-file-download"></i></a></div>
                 </div>
             </div>
